# quark

./: .gitignore  README.md  main.c  meson.build
meson/CompileFlags/: meson.build
meson/GNUInstallDirs/: meson.build
meson/GNUStandardDirs/: meson.build
source/: meson.build
test/: meson.build
