# GNUInstallDirs/meson.build ---                             -*- mode: meson; -*-
#
# Copyright (C) 2021  lebidouilleur
#
# Author: lebidouilleur <lebidouilleur@icloud.com>
# Keywords:
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# Commentary:
#   Setup installation directories as defined in the GNU Coding Standards.
#   You can learn more about it at the following link:
#       https://www.gnu.org/prep/standards/
#
# Code:
#



prefix    = get_option('prefix')
bindir    = join_paths(prefix, get_option('bindir'))
libdir    = join_paths(prefix, get_option('libdir'))
mandir    = join_paths(prefix, get_option('mandir'))
datadir   = join_paths(prefix, get_option('datadir'))
localedir = get_option('localedir')
